terratree blog update

--- a/about/blog2.html
+++ b/about/blog2.html
@@ -94,11 +94,7 @@
 							<ul class="list-unstyled">
 								<li>
 									<div class="podcaster">
-										<span class="d-block">Here are some of my latest projects, exploring UX, art, and technology.</span>
-										
-										<span class="small">Apologies for missing links, this blog is still under construction...</span>
-										<span class="small"></br></span>
-										<span class="small">Check back for updates!</span>
+										<span class="d-block" style="line-height: 1.2">Here are some of my latest projects, including some UX work, as well as some more experimental projects in art, and technology.</span>
 									</div>
 								</li>
 							</ul>
@@ -107,50 +103,49 @@
 
 					<div class="col-lg-9">
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/poemsformath.png');"></div>
-							<div class="text">
-								<h3 class="font-weight-light"><a href="PoemsForMath.pdf" target="blank">Poems for Math</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A small collection of original visuals and poems about algorithms and math.</small></span>
-								</div>
-							</div>
-						</div>
-
-						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/meditation/03.jpg');"></div>
-							<div class="text">
-								<h3 class="font-weight-light"><a href="meditation.html">Thermal Meditation Ball</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A 'serious game' designed to support and guide mindfulness meditation using a ball and temperature changes.</small></span>
-								</div>
-							</div>
-						</div>
-
-						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 							<div class="image" style="background-image: url('images/glitch.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="#">Glitch Art</a></h3>
+								<h3 class="font-weight-light"><a href="#">Glitch Art</a><span class="blog-year">2019-20</span></h3>
 								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Experiments in creating artwork using corrupted files and file corruption.</small></span>
 								</div>
 							</div>
 						</div>
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/glitchme.jpg');"></div>
+							<div class="image" style="background-image: url('images/poemsformath.png');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="https://glitch.com/@zlwilson" target="blank">V/AR Art</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>My glitch.me profile contains some V/AR projects in art and poetry.</small></span>
+								<h3 class="font-weight-light"><a href="PoemsForMath.pdf" target="blank">Poems for Math</a><span class="blog-year">2019</span></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A small collection of original visuals and poems about algorithms and math.</small></span>
+								</div>
+							</div>
+						</div>						
+
+						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+							<div class="image" style="background-image: url('images/meethalfway/03.jpg');"></div>
+							<div class="text">
+								<h3 class="font-weight-light"><a href="meethalfway.html">MeetHalfway</a><span class="blog-year">2019</span></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A prototype mobile app to facilitate collaborative geo-navigation and meetups.</small></span>
 								</div>
 							</div>
 						</div>
 
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/conspiracy.jpg');"></div>
+							<div class="image" style="background-image: url('images/terratree/07.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="https://zlwilson.github.io/conspiracy/conspiracy.html" target="blank">Conspiracy Theory Generator</a></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Generate your very own conspiracy theory website!</small></span>
+								<h3 class="font-weight-light"><a href="terratree.html">TerraTree</a><span class="blog-year">2019</span></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A multi-modal, interactive installation to improve community engagement through stories in the historic cemetery of Enschede, NL.</small></span>
 								</div>
 							</div>
 						</div>
 
+						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+							<div class="image" style="background-image: url('images/blueo.jpg');"></div>
+							<div class="text">
+								<h3 class="font-weight-light"><a href="https://vimeo.com/249602541" target="blank">Robo-Sculpture</a><span class="blog-year">2017-18</span></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A robotic sculpture installation, exploring human-robot relations and thier implications. Shown at the UBC AHVA Gallery in Vancouver, BC.</small></span>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="container" data-aos="fade-up">
 						<div class="row">
@@ -160,10 +155,10 @@
 										<li><a href="blog.html" class="icon-keyboard_arrow_left"></a></li>
 										<li><a href="blog.html">1</a></li>
 										<li class="active"><span>2</span></li>
-										<!-- <li><a href="#">3</a></li>
-										<li><a href="#">4</a></li>
+										<li><a href="blog3.html">3</a></li>
+										<!-- <li><a href="#">4</a></li>
 										<li><a href="#">5</a></li> -->
-										<li><a href="#" class="icon-keyboard_arrow_right"></a></li>
+										<li><a href="blog3.html" class="icon-keyboard_arrow_right"></a></li>
 									</ul>
 								</div>
 							</div>
