--- a/about/blog3.html
+++ b/about/blog3.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelementplayer.min.css">
-	
+
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
@@ -78,6 +78,7 @@
 				<div class="row align-items-center">
 					<div class="col-12 text-center">
 						<h1 class="mb-0" style="font-family: 'Courier', Courier, sans-serif; color: white;">Projects Blog</h1>
+						<!-- <a href="index.html">Home</a><span class="mx-2">&bullet;</span> C.V. -->
 					</div>
 				</div>
 			</div>
@@ -102,62 +103,35 @@
 
 					<div class="col-lg-9">
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/technofidgets/03.jpg');"></div>
+							<div class="image" style="background-image: url('images/glitchme.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="technofidgets.html">Creativity Techno-Fidgets</a><span class="blog-year">2020</span></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Exploring the design space of embodied creativity support tools at the INRIA human-computer interaction research lab in Paris.</small></span></div>
-							</div>
-						</div>
-
-						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/blog_header.jpg');"></div>
-							<div class="text">
-								<h3 class="font-weight-light"><a href="https://www.instagram.com/machine_scaped/" target="blank">Neural Net Photography</a><span class="blog-year">2020</span></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>An experimentation in using style-matching neural networks to generate digital photography artworks.</small></span></div>
-							</div>
-						</div>
-
-						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/fabricwave/01.jpg');"></div>
-							<div class="text">
-								<h3 class="font-weight-light"><a href="wavemachine.html">Fabric Wave Machine</a><span class="blog-year">2019-20</span></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A multi-dimensional sculpture project using modular fabric and electronics, presented at GDP Paris, and now installed in the Ex)situ Lab at INRIA Paris.</small></span></div>
-							</div>
-						</div>
-
-						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/aiartist/01.jpg');"></div>
-							<div class="text">
-								<h3 class="font-weight-light"><a href="aiartist.html">The AI Artist</a><span class="blog-year">2019-20</span></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>An AI-based art installation at GDP Paris, using a style matching generative GAN artwork trained on classical protrait painting.</small></span></div>
-							</div>
-						</div>
-
-						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/meditation/03.jpg');"></div>
-							<div class="text">
-								<h3 class="font-weight-light"><a href="meditation.html">Thermal Meditation Ball</a><span class="blog-year">2019-20</span></h3>
-								<div class="text-white mb-3">
-									<span class="text-black-opacity-05"><small>A 'serious game' designed to support and guide mindfulness meditation using a ball and temperature changes.</small></span>
-
+								<h3 class="font-weight-light"><a href="https://glitch.com/@zlwilson" target="blank">V/AR Art</a><span class="blog-year">2017-19</span></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>My 'glitch.me' profile contains some V/AR projects and experiments in art and poetry.</small></span>
 								</div>
-								<div class="text-white mb-3"></div>
 							</div>
-						</div>						
+						</div>
+						
+						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+							<div class="image" style="background-image: url('images/conspiracy.jpg');"></div>
+							<div class="text">
+								<h3 class="font-weight-light"><a href="https://zlwilson.github.io/conspiracy/conspiracy.html" target="blank">Conspiracy Theory Generator</a><span class="blog-year">2017</span></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Generate your very own conspiracy theory website!</small></span>
+								</div>
+							</div>
+						</div>
 					</div>
-					
 					<div class="container" data-aos="fade-up">
 						<div class="row">
 							<div class="col-md-12 text-center">
 								<div class="site-block-27">
 									<ul>
-										<li><a href="#" class="icon-keyboard_arrow_left"></a></li>
-										<li class="active"><span>1</span></li>
+										<li><a href="blog.html" class="icon-keyboard_arrow_left"></a></li>
+										<li><a href="blog.html">1</a></li>
 										<li><a href="blog2.html">2</a></li>
-										<li><a href="blog3.html">3</a></li>
+										<li class="active"><span>3</span></li>
 										<!-- <li><a href="#">4</a></li>
 										<li><a href="#">5</a></li> -->
-										<li><a href="blog2.html" class="icon-keyboard_arrow_right"></a></li>
+										<li><a href="#" class="icon-keyboard_arrow_right"></a></li>
 									</ul>
 								</div>
 							</div>
