--- a/about/meditation.html
+++ b/about/meditation.html
@@ -76,7 +76,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12 text-center">
-            <a href="blog2.html">< Back</a>
+            <a href="blog.html">< Back</a>
             <h1 class="mb-0" style="font-family: 'Courier', Courier, sans-serif; color: white;">Thermal Meditation Ball</h1>
           </div>
         </div>
