--- a/about/terratree.html
+++ b/about/terratree.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ZW - Fabric Wave Machine</title>
+  <title>ZW - TerraTree</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -52,32 +52,25 @@
           </div>
           <div class="col-9">
             <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
-
-
-
               <div class="d-block d-lg-none ml-md-0 mr-auto"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
-
               <ul class="site-menu js-clone-nav d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">C.V.</a></li>
                 <li><a href="blog.html">Blog</a></li>
               </ul>
             </nav>
-
-
           </div>
-
         </div>
       </div>
       
     </header>
 
-    <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/fabricwave/01h.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/terratree/02.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12 text-center">
-            <a href="blog.html">< Back</a>
-            <h1 class="mb-0" style="font-family: 'Courier', Courier, sans-serif; color: white;">Fabric Wave Machine</h1>
+            <a href="blog2.html">< Back</a>
+            <h1 class="mb-0" style="font-family: 'Courier', Courier, sans-serif; color: white;">TerraTree</h1>
           </div>
         </div>
       </div>
@@ -91,110 +84,50 @@
             <div class="featured-user  mb-5 mb-lg-0">
               <h3 class="mb-4">Related Skills</h3>
               <div class="podcaster">
-                <span class="d-block" style="line-height: 1.4;">Digital Fabrication, Rapid Prototyping, Electronics</span>
+                <span class="d-block" style="line-height: 1.4;">UX Design, Storytelling, Rapid Prototyping, Electronics</span>
               </div>
             </div>
           </div>
           <div class="col-md-7 pb-5 mr-auto">
-            <p>This project was a moving sculpture that made a wave in a sheet of fabric, that was an assemblage of pieces of a modular fabric design I created. It was exhibited in a design exhibition at GDP in Paris, and is now installed at the Ex)situ lab at INRIA Paris. [<a href="https://vimeo.com/481180091" target="blank">video</a>]</p>
+            <p>In a team of 5 designers and technologists, we conceptualized, designed, and created a multi-modal, interactive art installation for the Boerenkerkhof (farmers' cemetery) park in the city of Enschede, NL. This project was part of an Interaction Design course at the University of Twente.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">            
-              <img src="images/fabricwave/02.jpg" alt="Image" class="img-fluid" width="80%">
-              <p>The final sculpture displayed at the GDP office in Orsay, France.</p>
+              <img src="images/terratree/06.jpg" alt="Image" class="img-fluid" width="80%">
+              <p>Visitors explore the installation in Enschede, NL.</p>
             </div>
 
-            <p>This project began because of this modular fabric I created for a digital fabrication class at Université Paris-Sud, and evolved into this mechanical sculpture to be exhibited at this design exhibition. The modular fabric was a design challenge from this course: create a fabric out of non-traditional materials using parametric pieces fabricated on a laser cutter.</p>
-
-            <p>More about this process can be found on my <a href="https://wikifactory.com/@zackw" target="blank">WikiFactory page</a>.</p>
+            <p>This project was brought to the University by the city, who wanted to attract more visitors and revamp this old cemetery which was recently turned into park. To this end, we partnered with the local Enschede historical society to find stories from the city and the Boerenkerkhof, that we might incorporate into our installation.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/fabricwave/03.jpg" alt="Image" class="img-fluid" style="width: 48%">
-              <img src="images/fabricwave/08.jpg" alt="Image" class="img-fluid" style="width: 48%">
-              <p>Creating a parametric design in Autodesk Fusion 360,</br>and the final design laser cut into felt.</p>
+              <img src="images/terratree/01.jpg" alt="Image" class="img-fluid" style="width: 48%">
+              <img src="images/terratree/02.jpg" alt="Image" class="img-fluid" style="width: 48%">
+              <p>Getting a tour of the cemetery from the local historical society;</br>and the location in the park our team chose.</p>
             </div>
 
-            <p>While I learned a lot about the process of digital fabrication in this design project, there was very little design challenge as the possibilities were effectively limitless – it didn't have enough requirements to inspire innovation and creativity. This inspired me to focus on the exhibition instead. Very early I had the insight that an intriguing way to display fabric is to imply what is underneath using the shape – not unlike the snake that swallows an elephant and looks like a hat in the Little Prince.</p>
-
-            <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/fabricwave/04.jpg" alt="Image" class="img-fluid" width="80%">
-              <p>A quick, blurry sketch of my Little Prince idea.</p>
-            </div>
-
-            <p>This began my exploration into what I could cover. I was reading the biography of Leonardo da Vinci by Walter Isaacson at the time, and so my fabric design was inspired by his obsession with the spirals of water, so I was going to cover water. BUt I didn't want to simply float a piece of fabric in water, but I wanted the water to make waves to demonstrate the folding patterns in the fabric.</p>
+            <p>Through several cycles of ideation and rapid prototyping, working with a representative from the city and the historical society, we developed an installation to help visitors discover and connect with current and past stories of the city and it's residents.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/fabricwave/05.jpg" alt="Image" class="img-fluid" style="width: 48%">
-              <img src="images/fabricwave/06.jpg" alt="Image" class="img-fluid" style="width: 48%">
-              <p>An example of Leonardo da Vinci's obsession with sketching the spirals of water, and my spiral-inspired fabric design.</p>
+              <img src="images/terratree/03.jpg" alt="Image" class="img-fluid" style="width: 48%">
+              <img src="images/terratree/04.jpg" alt="Image" class="img-fluid" style="width: 48%">
+              <p>Brainstorming our interaction storyline;</br>and very basic, paper prototyping.</p>
             </div>
 
-            <p>The practical limits I had in power to generate waves (which is super hard!), as well as in my knowledge of electronics and fluid dynamics, gradually turned me to a mechanical wave machine. I started experimenting, using servomotors, to drive a wave pattern through the fabric.</p>
-
-            <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/fabricwave/07.jpg" alt="Image" class="img-fluid" width="80%">
-              <p>The very beginnings of the wave machine.</p>
-            </div>
-
-            <p>While perhaps not as honest as literal waves in water, creating mechanical waves created new opprotunities and challenges to create an aesthetically pleasing piece to display. After various prototypes and experimentations at smaller scales, I created the final piece using a sheet of the fabric, which was hung from a laser cut piece of wood with piano wire. This form provided new opportunities to view the sculpture from beneath as well as from the side.</p>
+            <p>One of the interesting experiments for this project, was to design from a narrative point of view. We worked with a local professor, as well as a visiting artist/instructor from Eindhoven, to explore the potentials of using a narrative design process for creating compelling interactive experiences.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">
-              <img src="images/fabricwave/09.jpg" alt="Image" class="img-fluid" width="80%">
-              <p>The final sculpture on display.</p>
+              <img src="images/terratree/05.jpg" alt="Image" class="img-fluid" width="80%">
+              <p>The team hard at work fabricating the various parts for the intallation.</p>
             </div>
 
-            <p>The exhibition was quite successful, and a creative design professor from Université Paris-Saclay asked if it could be installed in her lab, where it now resides.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+            <p>The final installation involved three crank-boxes, which each controlled an element of narrative along a spectrum: current-past, happy-sad, exciting-boring. Using these cranks, and an interactive map of the park, up to three people could explore current and past histories of the city and its residents.</p>
 
+            <div class="mb-4 text-center" data-aos="fade-up">
+              <img src="images/terratree/07.jpg" alt="Image" class="img-fluid" width="80%">
+              <p>TerraTree - a multi-modal, narrative explorer.</p>
+            </div>
 
-    <div class="site-section bg-light block-13">
-      <div class="container" data-aos="fade-up">
-        <div class="nonloop-block-13 owl-carousel">
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/fabricwave/11.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="">
-              <p>I tested the Arduino wave engine several ways, at several different scales.</p>
-            </div>
-          </div>
+            <p>I am still in contact with both the professor of this course, and the visiting instructor, in efforts to publish some of the findings from this process. We are exploring the design and prototyping process we used to design, its relationship to the specific place in Enschede, and how that can be generalized into design and design-teaching guidelines.</p>
 
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/fabricwave/12.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="">
-              <p>Testing the motors and wave form at full scale.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/fabricwave/13.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="">
-              <p>I 3D printed bases for the servomotors to mount them to the sculpture.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/fabricwave/14.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="">
-              <p>The final circuit attached to the sculpture (and hidden away out of sight on top).</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/fabricwave/15.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="">
-              <p>Visitors at the exhibition crowding around the sculpture.</p>
-            </div>
           </div>
         </div>
       </div>
