--- a/about/blog2.html
+++ b/about/blog2.html
@@ -103,9 +103,9 @@
 
 					<div class="col-lg-9">
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-							<div class="image" style="background-image: url('images/glitch.jpg');"></div>
+							<div class="image" style="background-image: url('images/glitch/01.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="#">Glitch Art</a><span class="blog-year">2019-20</span></h3>
+								<h3 class="font-weight-light"><a href="glitch.html">Glitch Art</a><span class="blog-year">2019-20</span></h3>
 								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Experiments in creating artwork using corrupted files and file corruption.</small></span>
 								</div>
 							</div>
