other design updates

--- a/about/index.html
+++ b/about/index.html
@@ -225,7 +225,7 @@
 						<span class="d-block mb-2 text-white-opacity-05">EIT VoiceArcade</span>
 						<p class="mb-4">Creating game assets (and prototyping) for a voice-controlled arcade.</p>
 						<p>
-							<a href="https://github.com/BRomans/EIT_voice_arcade" class="text-white p-2">more ></a>
+							<a href="https://github.com/BRomans/EIT_voice_arcade" target="blank" class="text-white p-2">more ></a>
 						</p>
 					</div>
 
@@ -279,7 +279,7 @@
 						<span class="d-block mb-2 text-white-opacity-05">AHVA UBC</span>
 						<p class="mb-4">Exploring human-computer relationships through robotic art installations.</p>
 						<p>
-							<!-- <a href="#" class="text-white p-2">more ></a> -->
+							<a href="https://vimeo.com/249602541" target="blank" class="text-white p-2">more ></a>
 						</p>
 					</div>
 
