--- a/about/ahvahub.html
+++ b/about/ahvahub.html
@@ -123,7 +123,7 @@
               <p>Developing QR code templates to connect digital safety and training information with physical spaces.</p>
             </div>
 
-            <h5>More...</h5>
+            <h5 id="more">More...</h5>
 
             <p>I was also in charge of developing and maintaining content across web and social media in this designer role. I created original graphic and typography designs for special events and other promotions. I also acted as a photographer – documenting artworks in exhibitions, and shooting event photography for exhibition openings and other special events.</p>
           </div>
