final portfolio updates

--- a/about/index.html
+++ b/about/index.html
@@ -122,6 +122,15 @@
 						<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Exploring the design space of embodied creativity support tools at the INRIA human-computer interaction research lab in Paris.</small></span></div>
 					</div>
 				</div>
+				
+				<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+					<div class="image" style="background-image: url('images/meethalfway/03.jpg');"></div>
+					<div class="text">
+
+						<h3 class="font-weight-light"><a href="meethalfway.html">MeetHalfway.app</a></h3>
+						<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A prototype mobile app to facilitate collaborative geo-navigation and meetups.</small></span></div>
+					</div>
+				</div>
 
 				<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 					<div class="image" style="background-image: url('images/ahvahub/01.jpg');"></div>
@@ -129,15 +138,6 @@
 
 						<h3 class="font-weight-light"><a href="ahvahub.html">Student Studio Safety Handbook</a></h3>
 						<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A user-centered information architecture redesign to support studio safety and training for the U.B.C. fine art department.</small></span></div>
-					</div>
-				</div>
-
-				<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-					<div class="image" style="background-image: url('images/meethalfway/03.jpg');"></div>
-					<div class="text">
-
-						<h3 class="font-weight-light"><a href="meethalfway.html">MeetHalfway.app</a></h3>
-						<div class="text-white mb-3"><span class="text-black-opacity-05"><small>A prototype mobile app to facilitate collaborative geo-navigation and meetups.</small></span></div>
 					</div>
 				</div>
 
@@ -156,7 +156,7 @@
 	<div class="container" data-aos="fade-up" style="margin-top: 20px">
 		<div class="row mb-5">
 			<div class="col-md-12 text-center">
-				<h2 style="font-family: 'Courier', Courier, sans-serif;">More Design Stuff</h2>
+				<h2 style="font-family: 'Courier', Courier, sans-serif;">Some Design Skills</h2>
 			</div>
 		</div>
 		<div class="row">
@@ -166,13 +166,11 @@
 					<img src="images/skills/1.jpg" alt="Image" class="img-fluid">
 
 					<div class="text">
-
+						<a href="ahvahub.html#more" class="text-white p-2">
 						<h2 class="mb-2 font-weight-light h4">Graphic Design</h2>
 						<span class="d-block mb-2 text-white-opacity-05">AHVA UBC</span>
-						<p class="mb-4">Creating diverse graphic designs and typography to promote events.</p>
-						<p>
-							<a href="ahvahub.html" class="text-white p-2">more ></a>
-						</p>
+						<p class="mb-4">Graphic, print, visual and typography design. more ></p>
+						</a>
 					</div>
 
 				</div>
@@ -187,7 +185,7 @@
 
 						<h2 class="mb-2 font-weight-light h4">Prototyping</h2>
 						<span class="d-block mb-2 text-white-opacity-05">Tippie</span>
-						<p class="mb-4">Interactive Figma prototype of a B2B2C app developed for Novopayments at EIT Digital Budapest</p>
+						<p class="mb-4">Interactive B2B2C prototype for Novopayments at EIT Digital Budapest.</p>
 						<p>
 							<!-- <a href="#" class="text-white p-2">more ></a> -->
 						</p>
@@ -205,7 +203,7 @@
 
 						<h2 class="mb-2 font-weight-light h4">User Journeys</h2>
 						<span class="d-block mb-2 text-white-opacity-05">University of Twente</span>
-						<p class="mb-4">Using storyboards to convey design ideas and user journeys for testing.</p>
+						<p class="mb-4">Communicating and testing designs using storyboards and user journeys.</p>
 						<p>
 							<!-- <a href="#" class="text-white p-2">more ></a> -->
 						</p>
@@ -220,13 +218,11 @@
 					<img src="images/skills/4.jpg" alt="Image" class="img-fluid">
 
 					<div class="text">
-
-						<h2 class="mb-2 font-weight-light h4">Mobile Games</h2>
+						<a href="https://github.com/BRomans/EIT_voice_arcade" target="blank" class="text-white p-2">
+						<h2 class="mb-2 font-weight-light h4">Game Design</h2>
 						<span class="d-block mb-2 text-white-opacity-05">EIT VoiceArcade</span>
-						<p class="mb-4">Creating game assets (and prototyping) for a voice-controlled arcade.</p>
-						<p>
-							<a href="https://github.com/BRomans/EIT_voice_arcade" target="blank" class="text-white p-2">more ></a>
-						</p>
+						<p class="mb-4">Game assets and C# prototype for a voice-controlled arcade. more ></p>
+						</a>
 					</div>
 
 				</div>
@@ -239,9 +235,9 @@
 
 					<div class="text">
 
-						<h2 class="mb-2 font-weight-light h4">Wireframing/Mockups</h2>
+						<h2 class="mb-2 font-weight-light h4">Wireframes/Mockups</h2>
 						<span class="d-block mb-2 text-white-opacity-05">Université Paris-Saclay</span>
-						<p class="mb-4">Using wireframes to experiment with color and gestures in login screens.</p>
+						<p class="mb-4">Experimenting and communicating interactions and gesture designs.</p>
 						<p>
 							<!-- <a href="#" class="text-white p-2">more ></a> -->
 						</p>
@@ -256,13 +252,11 @@
 					<img src="images/skills/6.jpg" alt="Image" class="img-fluid">
 
 					<div class="text">
-
+						<a href="ahvahub.html#more" class="text-white p-2">
 						<h2 class="mb-2 font-weight-light h4">Photography</h2>
 						<span class="d-block mb-2 text-white-opacity-05">AHVA UBC</span>
-						<p class="mb-4">Media production, studio and event photography, and bulk image management.</p>
-						<p>
-							<a href="ahvahub.html" class="text-white p-2">more ></a>
-						</p>
+						<p class="mb-4">Media production, photography, and image management. more ></p>
+						</a>
 					</div>
 
 				</div>
@@ -274,13 +268,11 @@
 					<img src="images/skills/7.jpg" alt="Image" class="img-fluid">
 
 					<div class="text">
-
+						<a href="https://vimeo.com/249602541" target="blank" class="text-white p-2">
 						<h2 class="mb-2 font-weight-light h4">Robotics</h2>
 						<span class="d-block mb-2 text-white-opacity-05">AHVA UBC</span>
-						<p class="mb-4">Exploring human-computer relationships through robotic art installations.</p>
-						<p>
-							<a href="https://vimeo.com/249602541" target="blank" class="text-white p-2">more ></a>
-						</p>
+						<p class="mb-4">Exploring human-computer relations through robotic art installations. more ></p>
+						</a>
 					</div>
 
 				</div>
@@ -293,9 +285,9 @@
 
 					<div class="text">
 
-						<h2 class="mb-2 font-weight-light h4">Eco-Art</h2>
+						<h2 class="mb-2 font-weight-light h4">Creativity</h2>
 						<span class="d-block mb-2 text-white-opacity-05">MELT Collective</span>
-						<p class="mb-4">Researching and prototyping plastic recycling methods and uses for waste products.</p>
+						<p class="mb-4">Research and prototyping recycling methods and uses for waste plastic.</p>
 						<p>
 							<!-- <a href="#" class="text-white p-2">more ></a> -->
 						</p>
@@ -316,7 +308,7 @@
 			<div class="col-md-8 text-left">
 				<p>My interest and passion for design is driven by my curiosity for technology, how humans use and relate to it, and how our experiences are shaped and mediated by it.</p>
 				<p>In practice, my design philosophy, shaped by my experiences in labs and design teams, is to iterate quickly and make things – there is no better way to communicate a design, to test a design, to validate a design, than to make some type of prototype and try it out.</p>
-				<p>The designs I am most inspired by, and proud of, come out of taking the time to fundamentally understand a problem, clearly articulating it, and designing the simplest solution for that specific person or group. If you want a simple, standard website, bootstrap is free and easy to use – I am more interested in thinking critically about the entire human-experience with a product or service, and designing a solution that is simple, elegant, and maybe even surprising, and delightful to use.</p>
+				<p>The designs I am most inspired by, and proud of, come out of taking the time to fundamentally understand a problem, clearly articulate it, and designing the simplest solution for that specific person or group. If you want a simple, standard website, bootstrap is free and easy to use – I am more interested in thinking critically about the entire human-experience with a product or service, and designing a solution that is simple, elegant, and maybe even surprising, and delightful to use.</p>
 			</div>
 			<div class="col-md-2"></div>
 		</div>
